# Physical-AI-Humanoid-Robotics-Book

./: .gitignore  .gitmessage  404.html  README-local.md  README.md  blog.html  docusaurus.config.ts  index.html  markdown-page.html  opensearch.xml  package-lock.json  package.json  rag-chatbot.html  search.html  sidebars.ts  sidebarsApi.js  sitemap.xml  start_backend.py  test_rag_flow.py
.github/workflows/: deploy.yml
.specify/memory/: claude-agent-context.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
assets/css/: styles.f70e7a29.css
assets/js/: 01a85c17.23470d20.js  (+78 more)
backend/: .gitignore  README.md  agent.py  api.py  constants.py  exceptions.py  main.py  pyproject.toml  reprocess_all_content.py  requirements.txt  utils.py
backend/config/: __init__.py  settings.py
backend/retrieval/: README.md  __init__.py  chunking.py  exceptions.py  ingestion.py  models.py  run_ingestion.py  search.py  test_retrieval.py  test_retrieval_integration.py  test_retrieval_unit.py  utils.py  validation.py
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
book_source/: CHANGELOG.md  constitution.md  plan.md  spec.md  tasks.md
docs/: conclusion.html  conclusion.md  constitution.html  constitution.md  course-roadmap.html  course-roadmap.md  instructor-guide.html  instructor-guide.md  intro.html
js/: rag-chatbot.js
ur/: 404.html  blog.html  index.html  markdown-page.html  opensearch.xml  rag-chatbot.html  search.html  sitemap.xml
welcome/: index.html
(+271 files in other folders)
