[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-ingestion-pipeline"
version = "0.1.0"
description = "RAG Ingestion Pipeline for Physical AI & Humanoid Robotics Book"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cohere>=4.0.0",
    "qdrant-client>=1.7.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0"
]